<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">FreshFoodFinder</string>
    <string name="main_title">Fresh Food Finder</string>
    <string name="menu_settings">Settings</string>
    <string name="Search">Search for foods</string>
    <string name="apple">Apple</string>
    <string name="banana">Banana</string>
    <string name="carrot">Carrot</string>
    <string name="Seasonal">Go Seasonal!</string>
    <string name="TogglerMap">Map</string>
    <string name="TogglerRecipe">Recipe</string>
    <string name="SeasonalNone">There are no foods currently in season.</string>
    <string name="pick_color">Pick a Colo</string>
    <string name="searchRadiusQuestion">How far away would you like to search?</string>
    <string name="UnSeasonal">Display All</string>

</resources>