<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/main_title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/main_title_color"
        android:textSize="14sp" />

    <ListView
        android:id="@+android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >
    </ListView>

    <TextView
        android:id="@+android:id/empty"
        android:layout_width="match_parent"
        android:layout_height="326dp"
        android:layout_weight="1"
        android:text="@string/SeasonalNone"
        android:textColor="@color/option_color" >

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal" >

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioButtonMap"
                android:layout_width="92dp"
                android:layout_height="match_parent"
                android:onClick="toggleMap"
                android:text="@string/TogglerMap"
                android:textColor="@color/option_color" />

            <RadioButton
                android:id="@+id/radioButtonRecipe"
                android:layout_width="92dp"
                android:layout_height="match_parent"
                android:onClick="toggleRecipe"
                android:text="@string/TogglerRecipe"
                android:textColor="@color/option_color" />
 
        </RadioGroup>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="goSeasonal"
            android:text="@string/Seasonal"
            android:textColor="@color/seasonal_color" />

    </LinearLayout>

</LinearLayout><!-- <EditText -->
<!-- android:inputType="text" -->
<!-- android:layout_width="160dp" -->
<!-- android:layout_height="wrap_content" -->
<!-- android:ems="10" -->
<!-- android:text="@string/Search" > -->
<!-- </EditText> -->
